compression/2.3/modules/ROOT/pages/compression-module-compress-decompress.adoc
= Compressing and Decompressing a Single File

Compression module provides the *Compress* and *Decompress* operations that enable you to compress or decompress a single file. 

== Configure Compress Operation

Given an input stream payload, the *Compress* operation enables you to compress the stream and return a new
compressed stream of bits. You can then store the compressed stream of bits in a file system or transfer it to another system.

. In Studio, drag the *Compress* operation to your flow.
. Set *Content* to your input stream payload to compress.
. Set *Compressor* to *Gzip compressor* or *Zip compressor* strategy.

image::compression-compressor-operation.png[Compressor operation configuration]

In the *Configuration XML* editor, the configuration looks like this:

[source, xml]
----
<compression:compress>
   <compression:content>#[payload.data]</compression:content>
   <compression:compressor>
       <compression:zip-compressor/>
   </compression:compressor>
</compression:compress>
----


== Configure GZip Compressor Strategy

A compressor strategy can compress a file or a single-entry archive. The *Gzip compressor* strategy declares that the content must be compressed in the `gzip` format.

. In Studio, select the *Compress* operation from your flow.
. Set *Compressor* to *Gzip compressor*.

image::compression-gzip-compressor.png[Compressor field set to gzip compressor]

In the *Configuration XML* editor, the configuration looks like this:
[source, xml]
----
<compression:compress doc:name="Compress">
       <compression:compressor >
	<compression:gzip-compressor/>
     </compression:compressor>
</compression:compress>
----

== Configure Zip Compressor Strategy

The *Zip compressor* *strategy declares that the content must be compressed in the `zip` format.

. In Studio, select the *Compress* operation from your flow.
. Set *Compressor* to *Zip compressor*.
. Select *Force ZIP64* to compress files and byte arrays greater than 4 GBs.

image::compression-zip64-compressor.png[Compression field set to Zip compressor strategy and Force ZIP64 field selected]

In the *Configuration XML* editor, the configuration looks like this:

[source, xml]
----
<compression:compress doc:name="Compress">
       <compression:compressor >
	<compression:zip-compressor forceZip64="true"/>
     </compression:compressor>
</compression:compress>
----

== Ignore Errors when Compressing Files

When compressing files, errors can occur to process the data. You can ignore errors during compression for Zip compressor strategies using the *Ignore errors when compressing* field, which defaults to `true`. If you deselect this field, the module will throw errors related to the specified context.

. In Studio, select the *Compress* operation from your flow.
. Set *Compressor* to *Zip compressor*.
. Select *Ignore errors when compressing*.

image::compression-ignore-errors.png[Ingore errors when compressing field selected]

In the *Configuration XML* editor, the configuration looks like this:

[source, xml]
----
<compression:compress doc:name="Compress" >
       <compression:compressor >
	<compression:zip-compressor ignoreErrorsWhenCompressing="true"/>
     </compression:compressor>
</compression:compress>
----


== Configure Decompress Operation

The *Decompress* operation enables you to decompress a single-entry compressed content, which is an archive in an specified compression format.

. In Studio, drag the *Decompress* operation to your flow.
. Set *Compressed* to your input stream payload to decompress.
. Set *Decompressor* to *Gzip decompressor* or *Zip decompressor* strategy.

image::compression-decompressor-operation.png[Compressor operation configuration]

In the *Configuration XML* editor, the configuration looks like this:

[source, xml, linenums]
----
<compression:decompress>
   <compression:content>#[payload]</compression:content>
   <compression:decompressor>
       <compression:gzip-decompressor/> 
   </compression:decompressor>
</compression:decompress>
----

== Configure GZip Decompressor Strategy

A decompressor strategy decompress a file or a single-entry archive. The *Gzip decompressor* strategy declares that the content must be
decompressed with the `gzip` format.

. In Studio, select the *Decompress* operation from your flow.
. Set *Decompressor* to *Gzip decompressor*.

image::compression-gzip-decompressor.png[Decompression field set to Gzip decompressor strategy]

In the *Configuration XML* editor, the configuration looks like this:

[source, xml]
----
<compression:decompress doc:name="Decompress" >
			<compression:decompressor >
				<compression:gzip-decompressor />
			</compression:decompressor>
		</compression:decompress>
----

== Configure Zip Decompressor Strategy

The *Zip decompressor* strategy declares that the content must bed decompressed with the `zip` format.

. In Studio, select the *Decompress* operation from your flow.
. Set *Decompressor* to *Zip decompressor*.

image::compression-zip-decompressor.png[Decompression field set to Zip decompressor strategy]

In the *Configuration XML* editor, the configuration looks like this:

[source, xml]
----
<compression:decompress doc:name="Decompress" >
			<compression:decompressor >
				<compression:zip-decompressor />
			</compression:decompressor>
		</compression:decompress>
----

== See Also
* xref:compression-documentation.adoc[Compression Module Reference]
* https://help.mulesoft.com[MuleSoft Help Center]